--- a/.mocharc.json
+++ b/.mocharc.json
@@ -1,5 +1,10 @@
 {
-  "extension": ["ts"],
-  "spec": "__tests__/**/*.test.ts",
-  "require": "ts-node/register"
+  "extension": [
+    "ts"
+  ],
+  "spec": "src/__tests__/**/*.test.ts",
+  "require": [
+    "ts-node/register",
+    "tsconfig-paths/register"
+  ]
 }
