--- a/package.json
+++ b/package.json
@@ -1,23 +1,22 @@
 {
-  "name": "test",
+  "name": "weather-api",
   "version": "0.0.0",
-  "engines": {
-    "node": ">= 18.12 <19"
-  },
   "devDependencies": {
     "@types/body-parser": "^1.19.3",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.18",
     "@types/mocha": "^10.0.2",
     "@types/morgan": "^1.9.6",
-    "@types/node": "~18",
+    "@types/node": "^18.16.0",
     "@typescript-eslint/eslint-plugin": "~6.2",
     "@typescript-eslint/parser": "~6.2",
     "eslint": "~8.46",
     "eslint-config-prettier": "~9.0",
+    "husky": "^8.0.3",
     "mocha": "^10.2.0",
     "prettier": "~3.0",
     "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "~5.1"
   },
   "dependencies": {
@@ -32,7 +31,12 @@
     "tslib": "~2.6",
     "zod": "^3.22.4"
   },
-  "volta": {
-    "node": "18.12.1"
+  "scripts": {
+    "build": "tsc",
+    "postinstall": "husky install",
+    "test": "mocha --exit",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "lint": "eslint . --ext .ts --fix",
+    "type:check": "tsc --noEmit"
   }
 }
