feat: added open api docs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
     "incremental": true,
     "moduleResolution": "node",
     "allowJs": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "baseUrl": "."
   },
   "include": [
     "./**/*.ts"
