--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/mocha": "^10.0.2",
     "@types/morgan": "^1.9.6",
     "@types/node": "^18.16.0",
+    "@types/swagger-ui-express": "^4.1.4",
     "@typescript-eslint/eslint-plugin": "~6.2",
     "@typescript-eslint/parser": "~6.2",
     "eslint": "~8.46",
@@ -22,11 +23,13 @@
   "dependencies": {
     "@ts-rest/core": "^3.30.4",
     "@ts-rest/express": "^3.30.4",
+    "@ts-rest/open-api": "^3.30.4",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "morgan": "^1.10.0",
+    "swagger-ui-express": "^5.0.0",
     "ts-option-monad": "^1.1.0",
     "tslib": "~2.6",
     "zod": "^3.22.4"
@@ -37,6 +40,7 @@
     "test": "mocha --exit",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "eslint . --ext .ts --fix",
-    "type:check": "tsc --noEmit"
+    "type:check": "tsc --noEmit",
+    "run:server": "ts-node -r tsconfig-paths/register ./src/main.ts"
   }
 }
