--- a/.prettierrc
+++ b/.prettierrc
@@ -1,12 +1,8 @@
 {
   "singleQuote": true,
   "trailingComma": "all",
-  "overrides": [
-    {
-      "files": ["*.ts", "*.mts"],
-      "options": {
-        "parser": "typescript"
-      }
-    }
-  ]
+  "printWidth": 120,
+  "arrowParens": "always",
+  "tabWidth": 2,
+  "semi": true
 }
